# MobileRobotTest

./: CMakeLists.txt
data/: motion.yml
include/: serial.hpp
src/: main.cpp  test.cpp
src/output/: test
